# developer-docs-test

./: .gitignore  .gitmodules  404.html  index.html  package.json
doxy/: BUILDPROCESS.txt  CMakeLists.txt  Doxyfile  TODO.txt  build_commands.txt  config.json  komodo-doxybook2Targets.cmake
doxy/my_src/: CMakeLists.txt  Makefile  cmake_install.cmake  komodo-doxybook2  main.cpp  temp-CMakeLists.txt
doxy/outputDir/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md
doxy/outputDir/Classes/: classantara_1_1gaming_1_1animation2d_1_1anim__system.md  classantara_1_1gaming_1_1blockchain_1_1nspv.md  classantara_1_1gaming_1_1box2d_1_1box2d__system.md  classantara_1_1gaming_1_1collisions_1_1basic__collision__system.md  classantara_1_1gaming_1_1ecs_1_1base__system.md  classantara_1_1gaming_1_1ecs_1_1lambda__system.md  classantara_1_1gaming_1_1ecs_1_1system.md  classantara_1_1gaming_1_1ecs_1_1system__manager.md  classantara_1_1gaming_1_1glfw_1_1graphic__system.md  classantara_1_1gaming_1_1glfw_1_1input__system.md  classantara_1_1gaming_1_1input_1_1virtual__input.md  classantara_1_1gaming_1_1lua_1_1details_1_1scripted__system.md  classantara_1_1gaming_1_1lua_1_1scripting__system.md  classantara_1_1gaming_1_1math_1_1basic__vector.md  classantara_1_1gaming_1_1math_1_1vector__mixins_1_1access__units.md  classantara_1_1gaming_1_1math_1_1vector__mixins_1_1access__xy.md  classantara_1_1gaming_1_1math_1_1vector__mixins_1_1access__z.md  classantara_1_1gaming_1_1resources_1_1system.md  classantara_1_1gaming_1_1scenes_1_1base__scene.md  classantara_1_1gaming_1_1scenes_1_1manager.md  classantara_1_1gaming_1_1sdl_1_1graphic__system.md  classantara_1_1gaming_1_1sdl_1_1input__system.md  classantara_1_1gaming_1_1sdl_1_1timer.md  classantara_1_1gaming_1_1sfml_1_1audio__system.md  classantara_1_1gaming_1_1sfml_1_1graphic__system.md  classantara_1_1gaming_1_1sfml_1_1input__system.md  classantara_1_1gaming_1_1sfml_1_1intro__scene.md  classantara_1_1gaming_1_1sfml_1_1lua__system.md  classantara_1_1gaming_1_1sfml_1_1resources__manager.md  classantara_1_1gaming_1_1timer_1_1time__step.md  classantara_1_1gaming_1_1world_1_1app.md  structantara_1_1gaming_1_1animation2d_1_1anim__component.md  structantara_1_1gaming_1_1animation2d_1_1anim__system_1_1anim__internal.md  structantara_1_1gaming_1_1audio_1_1music.md  structantara_1_1gaming_1_1audio_1_1sound__effect.md  structantara_1_1gaming_1_1blockchain_1_1nspv_1_1nspv__process.md  structantara_1_1gaming_1_1blockchain_1_1nspv__api.md  structantara_1_1gaming_1_1blockchain_1_1nspv__api_1_1broadcast__answer.md  structantara_1_1gaming_1_1blockchain_1_1nspv__api_1_1get__newaddress__answer.md  structantara_1_1gaming_1_1blockchain_1_1nspv__api_1_1listunspent__answer.md  (+66 more)
doxy/outputDir/Examples/: _2home_2siddhartha_2_documents_201-_studio_201-_commercial-_public_201-_commercial-_clients_201-93e3c30cce7e03b2915b41ddf5c65b72.md
doxy/outputDir/Files/: all_8components_8hpp.md  all_8events_8hpp.md  all_8geometry_8components_8hpp.md  all_8graphics_8components_8hpp.md  all_8transform_8components_8hpp.md  animation_82d_8cpp.md  animation_82d_8hpp.md  antara_8animation2d_8ranged__anim_8hpp.md  antara_8graphics_8component_8text_8cpp.md  api_8scaling_8cpp.md  api_8scaling_8hpp.md  api_8scaling_8mm.md  audio_8status_8hpp.md  audio_8system_8cpp.md  audio_8system_8hpp.md  base_8scene_8cpp.md  base_8scene_8hpp.md  base_8system_8cpp.md  base_8system_8hpp.md  basic_8collision_8system_8cpp.md  box2d_8system_8cpp.md  (+226 more)
doxy/templates/: class_members_details.tmpl  class_members_inherited_tables.tmpl  class_members_tables.tmpl  details.tmpl  footer.tmpl  header.tmpl  index.tmpl  kind_class.tmpl  kind_file.tmpl  kind_group.tmpl  member_details.tmpl  nonclass_members_details.tmpl  nonclass_members_tables.tmpl
(+716 files in other folders)
